--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -5,6 +5,7 @@
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <script src="https://kit.fontawesome.com/22b81d2d14.js" crossorigin="anonymous"></script>
         <title>Game Bot</title>
     </head>
     <body>
